--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet": "^1.9.4",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "next-cloudinary": "^6.3.0",
     "prisma": "^5.10.2",
     "query-string": "^9.0.0",
     "react": "^18",
