--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "leaflet": "^1.9.4",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
